# rt-tools

./: .gitignore  DEMO_AND_ANALYSIS.md  Dockerfile  Dockerfile.base  Dockerfile.base.eve  Jenkinsfile  README.md  build-all-eve.sh  build-all.sh  main.py  pyproject.toml
.github/: pull_request_template.md
caterpillar/: Dockerfile
codesys-hde2e/: Dockerfile  Dockerfile.base  Dockerfile_codesyscontrol_virtuallinux_4.18.0.0  README.md  build-all.sh  startup-strace.sh  startup.sh
codesys-hde2e/configs/: rdt_config_control.yaml  rdt_config_io.yaml
codesys-jitter-benchmark/: Dockerfile  docker-entrypoint.sh  install.sh
codesys-opcua-pubsub/opcua-client/: Dockerfile  codesyscontrol  docker-entrypoint.sh
codesys-opcua-pubsub/opcua-server/: Dockerfile
conf/: config.yaml
cyclictest/: Dockerfile
data/: README.md
data/05-19-35/: cpu_monitor.csv  cpustat_monitor.csv  irq_monitor.csv  meminfo_monitor.csv  output.csv  softirq_monitor.csv  sysinfo.json
data/06-38-03/: cpu_monitor.csv  cpustat_monitor.csv  irq_monitor.csv  (+4 more)
intel/: README.md  benchmarking.sh
iperf3/: Dockerfile
mega-benchmark/: Dockerfile
notebook/: 00_Caterpillar_analysis.ipynb  01_Cyclictest_analysis.ipynb  02_Megabenchmark.ipynb  03_Megabench_msr_comparison.ipynb  Interactive.ipynb  MBPTA-CV.ipynb
src/: bios_settings.py  detect_cpus.py  hde2e.py  hde2e_results.py  intel_pwrmgr.py  irq_affinity.py  metrics.py  plots.py  pqos_manager.py  region_of_acceptance.py  rt_preflight.py  sysinfo_collector.py  test_output_parser.py  test_output_parser_test.py  test_runner.py
stressor/: Dockerfile
(+130 files in other folders)
