[project]
name = "rtos-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "arviz>=0.22.0",
    "datasets>=4.4.1",
    "datetime>=5.5",
    "hurst",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "psutil>=7.1.2",
    "pyextremes>=2.3.3",
    "pymc>=5.26.1",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
hurst = { git = "https://github.com/Mottl/hurst" }
